--- a/Reference.bib
+++ b/Reference.bib
@@ -22,3 +22,10 @@ space},
   year={2014},
   publisher={Pearson Education}
 }
+
+@book{wooldridge2015introductory,
+  title={Introductory econometrics: A modern approach},
+  author={Wooldridge, Jeffrey M},
+  year={2015},
+  publisher={Cengage learning}
+}
